# autotape-3000

./: .gitignore  LICENSE  README.md  changelog.md  electron-builder.yml  electron.vite.config.mjs  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  run.bat  settings.json  tsconfig.node.tsbuildinfo  tsconfig.web.json  vitest.config.ts
core/: converter.py  recorder.py
gui/: cassette.py  icons.py  recorder_app.py  region_selector.py  theme.py  titlebar.py  waveform.py
native/loopback-capture/: Cargo.toml
native/loopback-capture/src/: main.rs
scripts/: ask-tool-dryrun.mjs  build-native.mjs  debug_art.ps1  generate-icon.mjs  gsmtc.ps1  gsmtc_loop.ps1  gsmtc_probe.ps1  resolve-loopback-target.ps1
services/: media_session.py  spotify.py
src/main/: index.ts
src/main/services/: AudioDevices.ts  AudioRecorder.ts  FfmpegResolver.ts  FileManager.ts  GsmtcService.ts  MetadataTagger.ts  ProcessResolver.ts  SettingsStore.ts  ThemeStore.ts  TrackSplitter.ts  TrimPresetsStore.ts  log.ts
src/main/services/__tests__/: AudioRecorder.test.ts  FileManager.test.ts  GsmtcService.test.ts  ProcessResolver.test.ts  SettingsStore.test.ts  TrackSplitter.test.ts  TrimPresetsStore.test.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.test.tsx  App.tsx  index.css  main.tsx
src/renderer/src/components/: NowPlaying.test.tsx  NowPlaying.tsx  OnboardingWizard.tsx  RecordButton.test.tsx  RecordButton.tsx  RecordingLog.test.tsx  RecordingLog.tsx  SettingsPanel.test.tsx  SettingsPanel.tsx  SongTrimModal.tsx  (+1 more)
utils/: filename.py
(+14 files in other folders)
